# pocketsphinx

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
0.4/demo/: robocup.launch  robocup_r1.launch  robocup_r2.launch  turtlebot_voice_cmd.launch  voice_cmd.launch
demo/: asr.dic  asr.fsg  asr.gram  asr.kwlist  asr_spk.dic  asr_spk.fsg  asr_spk.gram  automated.kwlist  goforward.gram  keywords_spk_verification.kwlist  robocup.launch  speaker_test.dic  speaker_test.kwlist  turtlebot_voice_cmd.launch  voice_cmd.gram  voice_cmd.kwlist  voice_cmd.launch
demo/speaker_verification/an4.ci_cont_adapt/: mdef  means  mixture_weights  transition_matrices  variances
examples/: execute_commands.py  speaker_verification_example.py  voice_control_example.py
language_models/: manipulator_command.corpus  manipulator_command.dict  manipulator_command.lm
launch/: asr.launch  asr_wrapper.launch  continuous.launch  kws.launch  kws_speaker_specific.launch  robot_voice_control.launch
misc/: record_audio.py  record_audio_simple.py  set_kws_threshold.py
model/: 5183.dic  5183.lm  5183.log_pronounce  5183.sent  5183.vocab
nodes/: asr_test.py  kws_test.py  recognizer.py  send_audio.py  voice_cmd_vel.py
